[tool.poetry]
name = "webtronics-test-task"
version = "0.1.0"
description = "social network via fastapi"
authors = ["Artem Nosov"]
readme = "README.md"
packages = [{include = "webtronics_test_task"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.78.0"
uvicorn = {version = "0.17.6", extras = ["standard"]}
aiosqlite = "0.17.0"
sqlalchemy = "1.4.36"
alembic = "1.7.7"
fastapi-users = {version = "10.0.6", extras = ["sqlalchemy"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
